fixtures/vyper/simple/overflow/positive/i64.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "9223372036854775807"
#!           ],
#!           "caller": "0xA89FA77ab60E7C58Ac7c8E5a5BBD964d56BcEd52"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int64) -> int64:
    return witness + 1
