fixtures/vyper/simple/overflow/negative/i64.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-9223372036854775808"
#!           ],
#!           "caller": "0xE5C493d180628Ea69cFC00db3A6f2974A88754AC"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int64) -> int64:
    return witness - 1
